# Licita-es

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt  requisitos-plataforma.md  requisitos-prospeccao.md  vercel.json
.claude/skills/analise-requisitos-licitacao/: SKILL.md
.claude/skills/analise-requisitos-licitacao/assets/: template-requisitos.md
.claude/skills/analise-requisitos-licitacao/references/: dominio-licitacao.md
alembic/: env.py
alembic/versions/: 26a71292c50c_adiciona_access_token_ao_cliente.py  6a8d7f3887ef_schema_inicial_clientes_perfis_editais_.py  eaa09caf4a2e_adiciona_email_ao_cliente.py
api/: index.py
scripts/: cadastrar_cliente.py  prospectar.py
src/agents/analise_edital/: agent.py
src/agents/prospeccao/: agent.py
src/api/: main.py
src/api/clients/: pncp.py
src/api/templates/: dashboard.html
src/data/: db.py  formatacao.py  models.py  settings.py
src/webapp/: main.py
src/webapp/clients/: pncp.py  resend_client.py
src/webapp/routes/: cron.py  dashboard.py
src/webapp/templates/: dashboard.html
tests/: test_analise_edital.py  test_cron.py  test_formatacao.py  test_pncp_arquivos.py  test_pncp_client.py  test_pncp_parse.py  test_resend_client.py  test_score.py
