[project]
name = "prospeccao-editais"
version = "0.1.0"
description = "Agente de prospecção de editais em licitações públicas"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
]

[dependency-groups]
dev = ["ruff>=0.7", "pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/data", "src/api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
